@@ -10,6 +10,7 @@ PHP                                                                        NEWS
 
 - Phar:
   . Add missing filter cleanups on phar failure. (nielsdos)
+  . Fixed bug GH-18642 (Signed integer overflow in ext/phar fseek). (nielsdos)
 
 - Readline:
   . Fix memory leak when calloc() fails in php_readline_completion_cb().
